k8s/03-ingress.yaml
# 03-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netpulse-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: netpulse.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netpulse
            port:
              number: 9000
